--- a/macros/EUDET_telescope_and_ITkStrip_TB_DESY-15-05.in
+++ b/macros/EUDET_telescope_and_ITkStrip_TB_DESY-15-05.in
@@ -6,6 +6,16 @@
 #
 
 ####################################################################
+#### DUT ####
+#### DESY May 2015
+#### Data from run log 
+####################################################################
+/allpix/det/setId        8
+/allpix/det/setPosition   0.0 0.0 375 mm
+/allpix/det/setRotation   0.0 180.0 180.00 deg
+####################################################################
+
+####################################################################
 #### Telescope planes #### 
 #### EUD0 #### 
 ####################################################################
@@ -16,7 +26,7 @@
 /allpix/extras/setTestStructureDetLink 300
 # Mimosa detector
 /allpix/det/setId        300
-/allpix/det/setPosition  0.0 0.0 0.0 mm
+/allpix/det/setPosition  0.0 0.0 0 mm
 /allpix/det/setRotation  0.0 180.0 180.0 deg
 /allpix/det/setLowTHL    13. keV
 ####################################################################
@@ -24,12 +34,12 @@
 ####################################################################
 # Al Holder
 /allpix/extras/setTestStructureType 8
-/allpix/extras/setTestStructurePosition -0.227617950928 -0.254617514893 153.0 mm
+/allpix/extras/setTestStructurePosition -0.227617950928 -0.254617514893 150.0 mm
 /allpix/extras/setTestStructureRotation -0.0 -0.0 0.00070544 deg
 /allpix/extras/setTestStructureDetLink 301
 # Mimosa detector
 /allpix/det/setId        301
-/allpix/det/setPosition   0.1 0.1 153.0 mm
+/allpix/det/setPosition   0.0 0.0 150 mm
 /allpix/det/setRotation   0.0 180.0 180.0 deg
 /allpix/det/setLowTHL    13. keV
 ####################################################################
@@ -42,7 +52,7 @@
 /allpix/extras/setTestStructureDetLink 302
 # Mimosa detector
 /allpix/det/setId        302
-/allpix/det/setPosition  0.2 0.2 305.0 mm
+/allpix/det/setPosition  0.0 0.0 305 mm
 /allpix/det/setRotation  0.0 180.0 180.00 deg
 /allpix/det/setLowTHL    13. keV
 ####################################################################
@@ -50,12 +60,12 @@
 ####################################################################
 # Al Holder
 /allpix/extras/setTestStructureType 8
-/allpix/extras/setTestStructurePosition -0.871765687988 -0.135744687646 362.0 mm
+/allpix/extras/setTestStructurePosition -0.871765687988 -0.135744687646 458.0 mm
 /allpix/extras/setTestStructureRotation -0.0 -0.0 -0.004538 deg
 /allpix/extras/setTestStructureDetLink 303
 # Mimosa detector
 /allpix/det/setId        303
-/allpix/det/setPosition   0.3 0.3 380.0 mm
+/allpix/det/setPosition   0.0 0.0 458 mm
 /allpix/det/setRotation   0.0 180.0 180.0 deg
 /allpix/det/setLowTHL    13. keV
 ####################################################################
@@ -63,12 +73,12 @@
 ####################################################################
 # Al Holder
 /allpix/extras/setTestStructureType 8
-/allpix/extras/setTestStructurePosition -0.98985583252 -0.170630609912 515 mm
+/allpix/extras/setTestStructurePosition -0.98985583252 -0.170630609912 609 mm
 /allpix/extras/setTestStructureRotation -0.0 -0.0 -0.0044567 deg
 /allpix/extras/setTestStructureDetLink 304
 # Mimosa detector
 /allpix/det/setId        304
-/allpix/det/setPosition  0.4 0.4 515 mm
+/allpix/det/setPosition  0.0 0.0 609 mm
 /allpix/det/setRotation  0.0 180.0 180 deg
 /allpix/det/setLowTHL    13. keV
 ####################################################################
@@ -76,28 +86,26 @@
 ####################################################################
 # Al Holder
 /allpix/extras/setTestStructureType 8
-/allpix/extras/setTestStructurePosition -1.05242432983 -0.220215597607 667.0 mm
+/allpix/extras/setTestStructurePosition -1.05242432983 -0.220215597607 759.0 mm
 /allpix/extras/setTestStructureRotation -0.0 -0.0 0.0034919 deg
 /allpix/extras/setTestStructureDetLink 305
 # Mimosa detector
 /allpix/det/setId        305
-/allpix/det/setPosition  0.5 0.5 667.0 mm
+/allpix/det/setPosition  0.0 0.0 759 mm
 /allpix/det/setRotation  0.0 180.0 180.0 deg
 /allpix/det/setLowTHL    13. keV
 ####################################################################
 
 
-####################################################################
-#### DUT ####
-#### DESY May 2015
-#### Data from gear file 
-####################################################################
-/allpix/det/setId        8
-/allpix/det/setPosition   0.0 0.0 350.0 mm
-/allpix/det/setRotation   0.0 180.0 180.00 deg
-####################################################################
 
 
+####################################################################
+#### FEI4
+
+####################################################################
+/allpix/det/setId        20
+/allpix/det/setPosition  0.0 0.0 750 mm
+/allpix/det/setRotation  0.0 180.0 180.0 deg
 
 ####################################################################
 # Scintillators
@@ -130,7 +138,7 @@
 #/vis/scene/add/axes 0. 0. 0. 10. cm
 /vis/scene/add/volume World -1 2
 /vis/viewer/set/style s
-#/vis/open OIX 1024x768-100+100
+/vis/open OIX 1024x768-100+100
 #/vis/open OGLIXm 1024x768-100+100
 #/vis/open RayTracer
 #/vis/open OGLIQt
@@ -149,11 +157,11 @@
 ####################################################################
 # Draw trajectories at end of event, showing trajectory points as
 # markers of size 2 pixels
-#/vis/scene/add/trajectories
-#/vis/modeling/trajectories/create/drawByCharge
-#/vis/modeling/trajectories/drawByCharge-0/default/setDrawStepPts false
-#/vis/modeling/trajectories/drawByCharge-0/default/setStepPtsSize 2
-#/vis/scene/endOfEventAction accumulate
+/vis/scene/add/trajectories
+/vis/modeling/trajectories/create/drawByCharge
+/vis/modeling/trajectories/drawByCharge-0/default/setDrawStepPts false
+/vis/modeling/trajectories/drawByCharge-0/default/setStepPtsSize 2
+/vis/scene/endOfEventAction accumulate
 
 # Write ROOT File
 /allpix/WriteROOTFiles/write 1
@@ -170,12 +178,12 @@
 ####################################################################
 # Source GPS
 /gps/particle e-
-/gps/pos/type Beam
-/gps/pos/sigma_r 5.0 mm
-# Centre of strip 51
-#/gps/pos/centre -0.036 4.0 -100.0 mm
-# Edge between strips 50/51
-/gps/pos/centre -0.075 4.0 -100.0 mm
+#/gps/pos/type Point
+/gps/pos/type Plane
+/gps/pos/shape Square
+/gps/pos/halfx 5 mm
+/gps/pos/halfy 5 mm
+/gps/pos/centre -0.037 0.0 -100.0 mm
 /gps/direction  0 0 1
 
 /gps/ene/type User
@@ -201,7 +209,7 @@
 ####################################################################
 # Shoot
 #/allpix/beam/frames 100
-/allpix/beam/frames 1
+/allpix/beam/frames 100
 # Hits distribution Type: const, gauss, poisson, expo. 
 # Number of particles per event -> 1 D.T. 11/2016
 /allpix/beam/type const 1
