--- a/macros/EUDET_telescope_and_ITkStrip_TB_DESY-15-05.in
+++ b/macros/EUDET_telescope_and_ITkStrip_TB_DESY-15-05.in
@@ -181,8 +181,8 @@
 #/gps/pos/type Point
 /gps/pos/type Plane
 /gps/pos/shape Square
-/gps/pos/halfx 5 mm
-/gps/pos/halfy 5 mm
+/gps/pos/halfx 0.037 mm
+/gps/pos/halfy 6 mm
 /gps/pos/centre -0.037 0.0 -100.0 mm
 /gps/direction  0 0 1
 
@@ -208,11 +208,12 @@
 
 ####################################################################
 # Shoot
-#/allpix/beam/frames 100
-/allpix/beam/frames 2
+/allpix/beam/frames 1
+#/allpix/beam/frames 50000
 # Hits distribution Type: const, gauss, poisson, expo. 
 # Number of particles per event -> 1 D.T. 11/2016
-/allpix/beam/type const 1
+/allpix/beam/type const 100
+#/allpix/beam/type const 1
 /allpix/beam/on
 
 
