Precision was too high, very slow simulation. Back to 10 bunches.

--- a/macros/EUDET_telescope_and_ITkStrips.in
+++ b/macros/EUDET_telescope_and_ITkStrips.in
@@ -177,28 +177,28 @@
 
 ####################################################################
 # Source GPS
-/gps/particle pi-
-/gps/pos/type Point
-#/gps/pos/type Plane
-#/gps/pos/shape Square
-#/gps/pos/halfx 0.037 mm
-#/gps/pos/halfy 0.100 mm
-/gps/pos/centre -0.037 0 -100.0 mm
+/gps/particle e-
+#/gps/pos/type Point
+/gps/pos/type Plane
+/gps/pos/shape Square
+/gps/pos/halfx 2.5 mm
+/gps/pos/halfy 2.5 mm
+/gps/pos/centre 0.0 0 -100.0 mm
 /gps/direction  0 0 1
 
 /gps/ene/type User
 /gps/hist/type energy
 # spectra
 # momentum [MeV]
-/gps/hist/point 120000 1
+/gps/hist/point 4800 1
 
 /gps/source/list
 
 
 ####################################################################
 # Shoot
-/allpix/beam/frames 1
-#/allpix/beam/frames 50000
+#/allpix/beam/frames 1
+/allpix/beam/frames 250000
 # Hits distribution Type: const, gauss, poisson, expo. 
 # Number of particles per event -> 1 D.T. 11/2016
 #/allpix/beam/type const 100
