--- a/macros/oneITkStrips_vis.in
+++ b/macros/oneITkStrips_vis.in
@@ -3,7 +3,7 @@
 # Mini sensor, 10 x 10 mm2
 
 # Detector 
-/allpix/det/setId         8
+/allpix/det/setId         100008
 /allpix/det/setPosition   0.0 0.0  0.0  mm
 /allpix/det/setRotation   0.0 180.0  180.0 deg
 /allpix/det/setLowTHL 13. keV
@@ -57,8 +57,8 @@
 /tracking/verbose 1
 /allpix/phys/verbose 0
 
-/vis/open OIX 1024x768-100+100
-#/vis/open OGLIXm 1024x768-100+100
+#/vis/open OIX 1024x768-100+100
+/vis/open OGLIXm 1024x768-100+100
 #/vis/open RayTracer
 #/vis/open OGLIQt
 #/vis/open OGLSQt
