--- a/macros/oneDetector_vis.in
+++ b/macros/oneDetector_vis.in
@@ -1,6 +1,6 @@
 
 # Detector 
-/allpix/det/setId         500
+/allpix/det/setId         200
 /allpix/det/setPosition   0.0 0.0  0.0  mm
 /allpix/det/setRotation   0.0 0.0  0.0 deg
 /allpix/det/setLowTHL 13. keV
@@ -54,8 +54,8 @@
 /tracking/verbose 0
 /allpix/phys/verbose 0
 
-/vis/open OIX 1024x768-100+100
-#/vis/open OGLIXm 1024x768-100+100
+#/vis/open OIX 1024x768-100+100
+/vis/open OGLIXm 1024x768-100+100
 #/vis/open RayTracer
 #/vis/open OGLIQt
 #/vis/open OGLSQt
@@ -104,7 +104,7 @@
 
 /gps/source/list
 
-/run/beamOn 20
+/run/beamOn 10
 
 # video
 #/control/alias phi 50
