Revert "Another macro for testbeam with itk strips simulation."
This reverts commit 7b43fbe9ee35e53a954b6a0d339d93d99b23198b.

--- a/macros/EUDET_telescope_and_ITkStrips.in
+++ b/macros/EUDET_telescope_and_ITkStrips.in
@@ -165,7 +165,7 @@
 
 # Write ROOT File
 /allpix/WriteROOTFiles/write 0
-/allpix/WriteROOTFiles/setFolderPath `pwd`/root
+/allpix/WriteROOTFiles/setFolderPath $HOME/ITk/Allpix/allpix/root
 
 ####################################################################
 # Write Telescope files
@@ -197,8 +197,8 @@
 
 ####################################################################
 # Shoot
-/allpix/beam/frames 1000
-#/allpix/beam/frames 100000
+#/allpix/beam/frames 1
+/allpix/beam/frames 100000
 # Hits distribution Type: const, gauss, poisson, expo. 
 # Number of particles per event -> 1 D.T. 11/2016
 #/allpix/beam/type const 100
